--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gravatar": "^1.8.1",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^8.5.1",
+    "lucide-react": "^0.477.0",
     "matter-js": "^0.19.0",
     "mongoose": "^5.11.8",
     "normalize-url": "^5.3.0",
